--- a/src/style.sass
+++ b/src/style.sass
@@ -13,6 +13,12 @@
     left: 0
     width: 100%
     height: 100%
+    .ima-container[data-preroll]
+      position: absolute
+      top: 0
+      left: 0
+      width: 100%
+      height: 100%
   .preroll-overlay[data-preroll]
     position: absolute
     top: 0
